[project]
name = "rl-trade"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "NorthSeaPark", email = "hou.308@osu.edu" }
]
dependencies = [
    "pandas>=2.2.2",
    "yfinance>=0.2.40",
    "gym>=0.26.2",
    "tensorflow>=2.16.2",
    "ta-lib>=0.4.32",
    "matplotlib>=3.9.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
